# TMS

./: CMakeLists.txt  README.md
apps/ActivityTracker/: CMakeLists.txt  README.md
apps/ActivityTracker/src/core/: APIManager.cpp  APIManager.h  ActivityMonitorBatcher.cpp  ActivityMonitorBatcher.h  ActivityTrackerClient.cpp  ActivityTrackerClient.h  ApplicationCache.cpp  ApplicationCache.h  SessionManager.cpp  SessionManager.h  SessionStateMachine.cpp  SessionStateMachine.h  SyncManager.cpp  SyncManager.h
apps/ActivityTracker/src/managers/: ConfigManager.cpp  ConfigManager.h  MonitorManager.cpp  MonitorManager.h
apps/ActivityTracker/src/monitors/: AppMonitor.cpp  AppMonitor.h  KeyboardMouseMonitor.cpp  KeyboardMouseMonitor.h  SessionMonitor.cpp  SessionMonitor.h  SystemMonitor.cpp  SystemMonitor.h
apps/ActivityTracker/src/monitors/linux/: AppMonitorLinux.cpp  AppMonitorLinux.h
apps/ActivityTracker/src/monitors/mac/: AppMonitorMac.h  AppMonitorMac.mm
apps/ActivityTracker/src/monitors/win/: AppMonitorWin.cpp  AppMonitorWin.h  CMakeLists.txt  KeyboardMouseMonitorWin.cpp  KeyboardMouseMonitorWin.h  SessionMonitorWin.cpp  SessionMonitorWin.h  SystemMonitorWin.cpp  SystemMonitorWin.h
apps/ActivityTracker/src/service/: ActivityTrackerService.cpp  ActivityTrackerService.h  MultiUserManager.cpp  MultiUserManager.h  ServiceManager.cpp  ServiceManager.h  main.cpp
apps/ActivityTracker/src/tests/: CMakeLists.txt  ConfigManagerTest.cpp
apps/ActivityTrackerAPI/: ActivityTrackerDbTemplates.cpp  CMakeLists.txt  README.md  api-routes.md  main.cpp
apps/ActivityTrackerAPI/Controllers/: ActivityEventController.cpp  ActivityEventController.h  ApiControllerBase.cpp  ApiControllerBase.h  AppUsageController.cpp  AppUsageController.h  ApplicationController.cpp  ApplicationController.h  AuthController.cpp  AuthController.h  BatchController.cpp  BatchController.h  MachineController.cpp  MachineController.h  ServerStatusController.cpp  ServerStatusController.h  SessionController.cpp  SessionController.h  SessionEventController.cpp  SessionEventController.h  SystemMetricsController.cpp  SystemMetricsController.h  UserRoleDisciplineController.cpp  UserRoleDisciplineController.h
apps/ActivityTrackerAPI/Core/: AuthFramework.cpp  AuthFramework.h  ModelFactory.cpp  ModelFactory.h
apps/ActivityTrackerAPI/Database/: machines_table.sql  schema.sql  schema_with_views.sql
apps/ActivityTrackerAPI/Models/: ActivityEventModel.cpp  ActivityEventModel.h  AfkPeriodModel.cpp  AfkPeriodModel.h  AppUsageModel.cpp  AppUsageModel.h  ApplicationModel.cpp  ApplicationModel.h  DisciplineModel.cpp  DisciplineModel.h  EventTypes.h  MachineModel.cpp  MachineModel.h  RoleModel.cpp  RoleModel.h  SessionEventModel.cpp  SessionEventModel.h  SessionModel.cpp  SessionModel.h  SystemMetricsModel.cpp  SystemMetricsModel.h  TokenModel.cpp  TokenModel.h  UserModel.cpp  UserModel.h  UserRoleDisciplineModel.cpp  UserRoleDisciplineModel.h
apps/ActivityTrackerAPI/Repositories/: ActivityEventRepository.cpp  ActivityEventRepository.h  AfkPeriodRepository.cpp  AfkPeriodRepository.h  AppUsageRepository.cpp  AppUsageRepository.h  ApplicationRepository.cpp  ApplicationRepository.h  BaseRepository.h  DisciplineRepository.cpp  DisciplineRepository.h  MachineRepository.cpp  MachineRepository.h  RoleRepository.cpp  RoleRepository.h  SessionEventRepository.cpp  SessionEventRepository.h  SessionRepository.cpp  SessionRepository.h  SystemMetricsRepository.cpp  SystemMetricsRepository.h  TokenRepository.cpp  TokenRepository.h  UserRepository.cpp  UserRepository.h  UserRoleDisciplineRepository.cpp  UserRoleDisciplineRepository.h
apps/ActivityTrackerAPI/Server/: ApiServer.cpp  ApiServer.h
apps/ActivityTrackerAPI/Services/: ADVerificationService.cpp  ADVerificationService.h
apps/ActivityTrackerAPI/Utils/: AuthHelper.h  SystemInfo.cpp  SystemInfo.h
libs/dbservice/: CMakeLists.txt
libs/dbservice/include/dbservice/: dbconfig.h  dbmanager.h  dbservice.h  dbservice.hpp
libs/dbservice/src/: dbconfig.cpp  dbmanager.cpp
libs/httpserver/: CMakeLists.txt
libs/httpserver/cmake/: httpserverConfig.cmake.in
libs/httpserver/include/httpserver/: controller.h  response.h  server.h
libs/httpserver/src/: controller.cpp  response.cpp  server.cpp
libs/logger/: CMakeLists.txt
libs/logger/include/logger/: logger.h
libs/logger/src/: logger.cpp
